[#4] 障害通知（Bugsnag）設定を追加

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,5 +9,8 @@ spring:
 
 logging:
   level:
-    jdbc: off
+    jdbc: false
     jdbc.sqltiming: debug
+
+app:
+  bugsnag-api-key: b34e48f13375dc94b1deb4c5848a5ac7
