--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
@@ -83,11 +88,6 @@
       <version>4.7.0</version>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>com.bugsnag</groupId>
       <artifactId>bugsnag</artifactId>
       <version>3.0.2</version>
@@ -99,6 +99,12 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <profiles>
+            <profile>development</profile>
+            <profile>test</profile>
+          </profiles>
+        </configuration>
       </plugin>
     </plugins>
   </build>
