[#7] トピックの編集は作成者のみに制限する

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,5 +13,6 @@ logging:
     jdbc.sqltiming: debug
 
 app:
-  bugsnag-api-key: b34e48f13375dc94b1deb4c5848a5ac7
   effective-days-of-topics: 30
+  bugsnag-api-key: b34e48f13375dc94b1deb4c5848a5ac7
+  encrypt-key: xGXoJQmMR2
